# ferris-shooting

./: Cargo.toml  readme.md
assets/images/clip/: aim.clip  dangling_pointer.clip  enemy_sprite.clip  null_pointer.clip  rust_logo.clip  undefined_behavior.clip
assets/lang/: ja_jp.json
src/: game_over.rs  game_pause.rs  log.rs  main.rs  renderer.rs  util.rs
src/elem/: mod.rs
src/elem/enemy/: instance.rs  mod.rs
src/elem/enemy/enemy_type/: mod.rs
src/elem/enemy/enemy_type/formation/: mod.rs  solo.rs  swarm.rs
src/elem/ferris/: aim.rs  body.rs  control.rs  instance.rs  mod.rs
src/elem/gear/: body.rs  instance.rs  mod.rs
src/elem/gear/gear_type/: gun.rs  missile.rs  mod.rs
src/elem/physic_body/: mod.rs
src/game/: mod.rs
src/game/enemy/: enemy.rs  kill.rs  mod.rs  spawn.rs  spawn_ctrl.rs
src/game/ferris/: aim.rs  ferris.rs  mod.rs  phys.rs
src/game/ferris/gear/: gear_type.rs  mod.rs
src/game/ferris/gear/missile/: mod.rs
src/game/ferris/ngear/: array.rs  mod.rs
src/game/ferris/ngear/gcomm/: explode.rs  mod.rs
src/game/ferris/ngear/gtype/: mod.rs
src/game/ferris/ngear/gtype/fragment/: mod.rs
src/game/ferris/ngear/gtype/gun/: mod.rs
src/game/ferris/ngear/gtype/missile/: choice.rs  mod.rs
src/game_pause/: mod.rs
src/old/: mod.rs
src/old/enemy/: mod.rs  types.rs
src/old/ferris/: input.rs  mod.rs  motion.rs
src/old/gear/: explode.rs  mod.rs  types.rs
